--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -30,6 +30,8 @@ jobs:
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
 
+     # Ferramentas DAST
+
      #ZAP (290 estrelas)
       - name: Checkout
         uses: actions/checkout@v2
