#8 fix: add vercel project to this repo
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -1,7 +1,9 @@
 name: CD
 
 # Alterar depois pra branch main
-on: pull_request
+on: 
+  push:
+    branches: [8-testar-workflow-ci-cd]
 
 defaults:
   run:
