--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -1,7 +1,11 @@
 name: CI
 
 # Alterar depois pra branch main
-on: pull_request
+# on: pull_request
+
+on:
+  push:
+    branches: [8-testar-workflow-ci-cd]
 
 jobs:
   build:
