--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -58,11 +58,11 @@ jobs:
       #   with:
       #     fetch-depth: 0 
       
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@master
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       # - name: Checkout Repository
       #   uses: actions/checkout@v2
