#8 fix: test sonar and save owasp report on develop branch
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -116,4 +116,4 @@ jobs:
           cd ${{secrets.NAME_REPO_GIT}}
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-          git push
+          git push origin develop
