#8 fix: test sonar
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -39,6 +39,7 @@ jobs:
         run: npm install
 
       # TruffleHog OSS (13k estrelas)
+      # Action
 
       # GoSec Security Checker (7k estrelas)
 
