--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=tcc-lucas-dafne_tcc-password-manager
-sonar.organization=tcc-lucas-dafne
+#sonar.projectKey=tcc-lucas-dafne_tcc-password-manager
+#sonar.organization=tcc-lucas-dafne
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=tcc-password-manager
