#8 fix: remove sonar projects file

--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -59,11 +59,11 @@ jobs:
       #   with:
       #     fetch-depth: 0 
       
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # - name: SonarCloud Scan
+      #   uses: SonarSource/sonarcloud-github-action@master
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       # - name: Checkout Repository
       #   uses: actions/checkout@v2
