--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -54,10 +54,10 @@ jobs:
       # Ferramentas SAST
 
       # SonarCloud Scan
-      # - name: SonarCloud
-      #   uses: actions/checkout@v3
-      #   with:
-      #     fetch-depth: 0 
+      - name: SonarCloud
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 
       
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
