--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -43,7 +43,7 @@ jobs:
         with:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://tcc-password-manager.vercel.app/'
+          target: 'https://hml-tcc-password-manager.vercel.app'
           cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
 
       - name: Upload artifact
@@ -57,7 +57,7 @@ jobs:
         run: |
           echo "START_DATE=$(date +'%d-%m-%YT%H-%M-%S-%Z')" >> $GITHUB_ENV
           echo "START_TIMESTAMP=$(date +'%s')" >> $GITHUB_ENV
-          TMP_TARGET="https://tcc-password-manager.vercel.app/"
+          TMP_TARGET="https://hml-tcc-password-manager.vercel.app"
           echo "TARGET=$TMP_TARGET" >> $GITHUB_ENV
 
       - name: Checkout
