--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -34,7 +34,7 @@ jobs:
 
      # Ferramentas DAST
 
-     #ZAP (290 estrelas)
+     #ZAP BASELINE SCAN (290 estrelas)
       - name: Checkout
         uses: actions/checkout@v2
       
@@ -53,18 +53,28 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap_scan
-          path: ${{ github.workspace }}/reports
+          path: ${{ github.workspace }}
 
-      - name: Save Results
-        if: always()
-        run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          mkdir -p ${{secrets.NAME_REPO_GIT}}/reports
-          cp -R ${{github.workspace}}/reports ${{secrets.NAME_REPO_GIT}}/reports
-          cd ${{secrets.NAME_REPO_GIT}}
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
-          git push origin develop
+      #ZAP FULL SCAN (290 estrelas)
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.10.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'https://hml-tcc-password-manager.vercel.app'
+          cmd_options: '-a'
+          allow_issue_writing: 'true'
+          #fail_action: 'true'
+          artifact_name: 'zap_full_scan'
+      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap_full_scan
+          path: ${{ github.workspace }}
 
       # SQL MAP
       - name: Prepare environment
