--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -53,7 +53,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap_scan
-          path: ${{ github.workspace }}
+          path: |
+            ${{ github.workspace }}/report_html.html
+            ${{ github.workspace }}/report_json.html
+            ${{ github.workspace }}/report_md.html
 
       #ZAP FULL SCAN (290 estrelas)
       - name: Checkout
@@ -62,7 +65,7 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.10.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://hml-tcc-password-manager.vercel.app'
           cmd_options: '-a'
