--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -19,6 +19,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Config GitHub
+        run: |
+          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+          git config --global user.name "${{secrets.GIT_USER_NAME}}"
+  
       - name: Install Vercel CLI
         run: npm install --global vercel
 
@@ -47,12 +52,12 @@ jobs:
           cmd_options: '-a' #indica ataque ativo, onde o zap tenta atuar como um atacante em busca de vulnerabilidades
           allow_issue_writing: 'true'
           #fail_action: 'true'
-          artifact_name: 'zap_scan'
+          artifact_name: 'zap_baseline_scan'
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: zap_scan
+          name: zap_baseline_scan
           path: |
             ${{ github.workspace }}/report_html.html
             ${{ github.workspace }}/report_json.html
@@ -77,7 +82,23 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap_full_scan
-          path: ${{ github.workspace }}
+          path: |
+            ${{ github.workspace }}/report_html.html
+            ${{ github.workspace }}/report_json.html
+            ${{ github.workspace }}/report_md.html
+
+      - name: Save Results
+        if: always()
+        run: |
+          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+          mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan_reports
+          mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
+          cp -R ${{github.workspace}}/zap_baseline_scan/* ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan_reports
+          cp -R ${{github.workspace}}/zap_full_scan/* ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
+          cd ${{secrets.NAME_REPO_GIT}}
+          git add .
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+          git push origin develop
 
       # SQL MAP
       - name: Prepare environment
