#8 fix: change file format to zip

--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -93,7 +93,7 @@ jobs:
         run: |
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
-          cp -R ${{github.workspace}}/zap_full_scan/* ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
+          cp -R ${{github.workspace}}/zap_full_scan.zip ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
           cd ${{secrets.NAME_REPO_GIT}}
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
