#8 fix: add log

--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -87,6 +87,9 @@ jobs:
             ${{ github.workspace }}/report_html.html
             ${{ github.workspace }}/report_json.html
             ${{ github.workspace }}/report_md.html
+      
+      - name: Debugging - List files in workspace
+        run: ls -l ${{github.workspace}}
 
       - name: Save Results
         if: always()
