#8 fix: add files on folder

--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -87,16 +87,19 @@ jobs:
             ${{ github.workspace }}/report_html.html
             ${{ github.workspace }}/report_json.html
             ${{ github.workspace }}/report_md.html
-      
-      - name: Debugging - List files in workspace
-        run: ls -l ${{github.workspace}}
+
+      - name: Copiar arquivos para pasta
+        run: |
+          cp ${{ github.workspace }}/report_html.html $${{ github.workspace }}/zap_full_scan/report_html.html
+          cp ${{ github.workspace }}/report_json.json $${{ github.workspace }}/zap_full_scan/report_json.json
+          cp ${{ github.workspace }}/report_md.md $$${{ github.workspace }}/zap_full_scan/report_md.md
 
       - name: Save Results
         if: always()
         run: |
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
-          cp -R ${{github.workspace}}/zap_full_scan.zip ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
+          cp -R ${{github.workspace}}/zap_full_scan ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
           cd ${{secrets.NAME_REPO_GIT}}
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
