--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -19,6 +19,9 @@ jobs:
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
+
+      - name: Checkout Repository
+        uses: actions/checkout@v3
   
       # NPM AUDIT
       # - name: run npm audit
