--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -87,21 +87,19 @@ jobs:
         with:
           name: zap_full_scan
           path: |
-            ${{ github.workspace }}/report_html.html
-            ${{ github.workspace }}/report_json.html
-            ${{ github.workspace }}/report_md.html
+            ${{ github.workspace }}/zap_full_scan
 
       - name: Save Results
         if: always()
         run: |
           mkdir -p ${{ github.workspace }}/zap_full_scan
           mv ${{ github.workspace }}/report_html.html ${{ github.workspace }}/zap_full_scan/report_html.html
-          mv ${{ github.workspace }}/report_json.json ${{ github.workspace }}/zap_full_scan/report_json.json
-          mv ${{ github.workspace }}/report_md.md ${{ github.workspace }}/zap_full_scan/report_md.md
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
           cp -R ${{github.workspace}}/zap_full_scan ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan_reports
           cd ${{secrets.NAME_REPO_GIT}}
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+          git push
 
       # SQL MAP
       - name: Prepare environment
