#8 fix: change commands to test

--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -68,6 +68,7 @@ jobs:
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout develop
           mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan
+          unzip ${{ github.workspace }}/zap_baseline_scan.zip -d ${{ sgithub.workspace }}/reports/zap_baseline_scan
           cp -R ${{github.workspace}}/zap_baseline_scan ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push origin develop
