#8 fix: add eslint file

--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -63,7 +63,7 @@ jobs:
       # Legitify Analize
 
       - name: ESLint check
-        run: npx eslint ./src --ext .js
+        run: npx eslint ./src --ext .ts
 
       # Ferramentas SAST
 
