--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -78,9 +78,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      
-      # - name: Checkout Repository
-      #   uses: actions/checkout@v2
 
       # CHECKMARX (46 estrelas)
       # - uses: actions/checkout@v2
@@ -102,6 +99,9 @@ jobs:
       #     sca_username: ${{ secrets.SCA_USERNAME }}
 
       # Ferramentas SCA
+
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
       # OWASP DEPENDENCY CHECK (63 estrelas)
       - name: Depcheck
