--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -36,8 +36,8 @@ jobs:
       # - name: Build
       #   run: docker-compose build 
 
-      # - name: Checkout Repository
-      #   uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
       - name: install npm install
         env:
