--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -11,10 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    # - name: install dependencies
-    #   env:
-    #     NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
-    #   run: npm install
+    - name: install dependencies
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
+      run: npm install
 
-    # - name: ESLint check
-    #   run: npx eslint ./src --ext .ts
+    - name: ESLint check
+      run: npx eslint ./src --ext .ts
