--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-no-lint": "CI=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,6 +51,11 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.32"
+    "@eslint/js": "^9.2.0",
+    "@types/styled-components": "^5.1.32",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.2.0",
+    "typescript-eslint": "^7.9.0"
   }
 }
