--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -36,6 +36,12 @@ jobs:
       # - name: Build
       #   run: docker-compose build 
 
+      - name: Limpar Cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm # Substitua pelo caminho do cache que deseja limpar
+          action: delete
+
       - name: install npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
