#8 fix: fix depcheck

--- a/.github/workflows/01-ci.yaml
+++ b/.github/workflows/01-ci.yaml
@@ -56,17 +56,17 @@ jobs:
 
       # Ferramentas SAST
 
-      # SonarCloud Scan
-      # - name: SonarCloud
-      #   uses: actions/checkout@v3
-      #   with:
-      #     fetch-depth: 0 
+      SonarCloud Scan
+      - name: SonarCloud
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 
       
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@master
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       # Ferramentas SCA
 
