--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -67,7 +67,9 @@ jobs:
         with:
           name: zap_baseline_scan
           path: |
-            ${{ github.workspace }}/zap_baseline_scan/
+            ${{ github.workspace }}/report_html.html
+            ${{ github.workspace }}/report_json.json
+            ${{ github.workspace }}/report_md.md
 
       - name: Save Results
         if: always()
@@ -75,8 +77,11 @@ jobs:
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout develop
-          mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan
-          cp -R ${{github.workspace}}/zap_baseline_scan/ ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/
+          current_date=$(date +%Y-%m-%d)
+          rm -rf ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date} && mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date}
+          cp -R ${{github.workspace}}/report_html.html ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date}/
+          cp -R ${{github.workspace}}/report_md.md ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date}/
+          cp -R ${{github.workspace}}/report_json.json ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date}/
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push origin develop
 
