--- a/.github/workflows/02-cd.yaml
+++ b/.github/workflows/02-cd.yaml
@@ -136,9 +136,9 @@ jobs:
           git checkout develop
           current_date=$(date +%Y-%m-%d)
           rm -rf ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan/${current_date} && mkdir -p ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan/${current_date}
-          cp -R ${{github.workspace}}/report_html.html ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_json.json ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_md.md ${{secrets.NAME_REPO_GIT}}/reports/zap_baseline_scan/${current_date}/
+          cp -R ${{github.workspace}}/report_html.html ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan/${current_date}/
+          cp -R ${{github.workspace}}/report_json.json ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan/${current_date}/
+          cp -R ${{github.workspace}}/report_md.md ${{secrets.NAME_REPO_GIT}}/reports/zap_full_scan/${current_date}/
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push origin develop
